Nested Jobs. A composition of a parent and child jobs.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ spring.datasource.url=jdbc:h2:mem:spring_batch_learn_db
 spring.datasource.username=sa
 spring.datasource.password=password
 
+# a job that should be executed first
+spring.batch.job.names=parentJob
