Listeners. The application sends emails about its work.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,15 @@ spring.datasource.username=sa
 spring.datasource.password=password
 
 # a job that should be executed first
-spring.batch.job.names=parentJob
+#spring.batch.job.names=parentJob
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sender@example.com
+spring.mail.password=password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# email to receive messages
+as.mail.receiver=receiver@example.com
+
