Job Parameters. Runs in command line with "message" parameter.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,5 +34,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # email to receive messages
-as.mail.receiver=receiver@example.com
+#as.mail.receiver=receiver@example.com
 
