--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 #override the spring parameter 'create-drop', 'create' creates the schema deleting the previous data
 spring.jpa.hibernate.ddl-auto=create
-# no sql in the log
 spring.jpa.show-sql=false
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://localhost:3306/spring_batch_learn?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
@@ -12,14 +11,15 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 #spring.datasource.password=p@ssw0rd
 #spring.datasource.schema=schema-mysql.sql
 
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/spring_batch_learn
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
-#spring.datasource.schema=schema-postgresql.sql
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring_batch_learn
+#spring.datasource.url=jdbc:postgresql://localhost:5432/spring_batch_01
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.schema=schema-postgresql.sql
 
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:spring_batch_learn_db
-spring.datasource.username=sa
-spring.datasource.password=password
+#spring.datasource.driverClassName=org.h2.Driver
+#pring.datasource.url=jdbc:h2:mem:spring_batch_learn_db
+#spring.datasource.username=sa
+#spring.datasource.password=password
 
