--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #override the spring parameter 'create-drop', 'create' creates the schema deleting the previous data
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=false
-logging.level.root=ERROR
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.show-sql=false
+#logging.level.root=ERROR
 spring.datasource.continueOnError=false
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
