Scaling jobs. Multithreaded step. SimpleAsyncTaskExecutor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 #override the spring parameter 'create-drop', 'create' creates the schema deleting the previous data
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.show-sql=false
-logging.level.root=ERROR
-#spring.datasource.continueOnError=false
+#logging.level.root=ERROR
+spring.datasource.continueOnError=false
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
@@ -14,10 +14,10 @@ logging.level.root=ERROR
 #spring.datasource.password=p@ssw0rd
 #spring.datasource.schema=schema-mysql.sql
 
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/spring_batch_learn
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring_batch_learn
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 #spring.datasource.schema=schema-postgresql.sql
 
 #spring.datasource.driverClassName=org.h2.Driver
